--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,6 @@
 $maincolour: #2196f3;
 $footer-color: #2f303a;
-$portfolio-buttons: #f0f0f0;
+$portfolio-buttons: #F5F4FA;
 $overlay: #2196F3E5;
 $socialmedia_and_clients: #afb1b8;
 $teamsection_and_svg-div: #f5f4fa;
