--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -1,33 +1,49 @@
-.banner {
-    margin-top: 0;
-    text-align: center;
-    height: 600px;
-    background-image: linear-gradient(to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)),
-      url(../img/background.jpg);
-    margin-bottom: 94px;
-  }
+     .banner {
+      margin-top: 0;
+      text-align: center;
+      height: 400px;
+      width: 100vw;
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../img/background.jpg);
+      margin-bottom: 94px;
+      background-size: cover;
+      background-position: center;
+    }
   
-  .main-heading {
-    padding-top: 200px;
-    color: white;
-    font-weight: 900;
-    font-size: 44px;
-    text-align: center;
-    margin-bottom: 23px;
-  }
+    .main-heading {
+      color: white;
+      font-weight: 900;
+      font-size: 26px;
+      text-align: center;
+      padding-top: 118px;
+      padding-bottom: 40px;
+      line-height: 42px;
+    }
   
-  .btn-open {
-    color: white;
-    background-color: $maincolour;
-    font-weight: 700;
-    font-size: 16px;
-    width: 216px;
-    height: 50px;
-    border-radius: 5px;
-  }
-  
-  .btn-open:hover {
-    @extend %scale1_05;
-  }
+    .btn-open {
+      color: white;
+      background-color: $maincolour;
+      font-weight: 700;
+      font-size: 16px;
+      width: 216px;
+      height: 50px;
+      border-radius: 5px;
+    }
+    
+    .btn-open:hover {
+      @extend %scale1_05;
+    }
+
+
+   @media screen and (min-width: 1200px) {
+      .banner {
+        height: 600px;
+        background-position:top;
+      }
+
+      .main-heading {
+        padding-top: 200px;
+      }
+   }
