--- a/sass/layout/_clientsSection.scss
+++ b/sass/layout/_clientsSection.scss
@@ -1,22 +1,27 @@
 
-.section-heading {
-    text-align: center;
-    font-weight: 700;
-    font-size: 36px;
-    margin-top: 94px;
-    margin-bottom: 50px;
-  }
-
 .clients-list {
     display: flex;
-    margin-bottom: 94px;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    padding-bottom: 60px;
   }
-  
+
+.section-heading {
+    color: $header-link_modal-heading_header-link;
+    text-align: center;
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 30px;
+    padding-top: 60px;
+  }
+
   .clients-list-item {
     @extend %flex-center;
     height: 92px;
-    width: 170px;
+    width: 210px;
     @include border($socialmedia_and_clients);
+    border-radius: 4px;
   }
   
   .clients-list-item:hover>svg {
@@ -35,13 +40,14 @@
     transition-delay: 0;
   }
   
-  .clients-list-item:not(:last-child) {
-    margin-right: 30px;
-  }
-  
   .client-svg {
     height: 60px;
     width: 106px;
     fill: $socialmedia_and_clients;
   }
   
+  @media screen and (min-width: 1200px) {
+    .clients-list-item {
+      width: 170px;
+    }
+  }
