--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,24 +1,34 @@
 .footer {
+    display: flex;
     background-color: $footer-color;
     font-weight: 400;
     font-size: 14px;
-    display: flex;
+    
   }
   
   .footer-div {
-    margin-top: 60px;
+    padding-top: 60px;
+    width: 100%;
   }
   
   .footer-block {
     display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  
+  .footer-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .footer-webstudio {
     text-decoration: none;
     font-family: "Raleway", sans-serif;
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 700;
     color: $maincolour;
+    display: flex;
+    justify-content: center;
   }
   
   .footer-studio {
@@ -34,7 +44,13 @@
   }
   
   .footer-list {
+    display: flex;
+    flex-direction: column;
     margin-top: 20px;
+    margin-bottom: 60px;
+    row-gap: 8px;
+    text-align: center;
+    
   }
   
   .footer-list-item {
@@ -42,16 +58,8 @@
     opacity: 0.6;
   }
   
-  .footer-list-item:not(:first-child) {
-    margin-top: 9px;
-  }
-  
   .footer-list-item:first-child {
     opacity: 1;
-  }
-  
-  .footer-list-item:last-child {
-    padding-bottom: 60px;
   }
   
   .icon-footer {
@@ -59,12 +67,16 @@
     width: 20px;
     fill: #fff;
   }
-  
+  .footer-svg-list {
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 60px
+  }
+
   .footer-svg-list-item {
+    @extend %flex-center;
     height: 44px;
     width: 44px;
-    margin-right: 10px;
-    @extend %flex-center;
     background: $footersvg;
     border-radius: 25px;
   }
@@ -76,35 +88,36 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
   }
-  
+
+  .footer-form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .footer-label {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
   .footer-heading {
     font-family: Roboto;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 700;
     color: #fff;
     margin-bottom: 20px;
+    text-align: center;
   }
   
-  .footer-wrapper {
-    margin-left: 70px;
-    padding-bottom: 100px;
-  }
-  
-  .footer-svg-list {
-    display: flex;
-    margin-top: 30px;
-  }
-  
-  .footer-form {
-    margin-left: 90px;
-  }
   
   .footer-email {
     height: 50px;
-    width: 358px;
     @include border($footeremail);
     border-radius: 4px;
     background-color: $footer-color;
+    max-width: 450px;
+    width: 100%;
   }
   
   .footer-email::placeholder {
@@ -115,15 +128,15 @@
   }
   
   .subscribe-button {
+    font-family: Roboto;
     height: 50px;
     width: 200px;
-    margin-left: 12px;
     border-radius: 4px;
     background-color: $maincolour;
     color: #fff;
-    font-weight: 700px;
     font-size: 16px;
-    font-family: Roboto;
+    margin-top: 20px;
+    margin-bottom: 70px;
   }
   
   .icon-send {
@@ -139,4 +152,27 @@
     flex-direction: row;
     align-items: center;
     margin-left: 28px;
+  }
+
+
+@media screen and (min-width: 768px) {
+  // .footer-div {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   flex-direction: row;
+  // }
+  
+  // .footer-form {
+    
+  // }
+  
+  // .footer-email {
+  //   width: 450px;
+  // }
+}
+
+@media screen and (min-width: 1200px) {
+    // .footer-div {
+       
+    // }
   }
