--- a/sass/layout/_teamSection.scss
+++ b/sass/layout/_teamSection.scss
@@ -1,23 +1,27 @@
+.main-list-team {
+   padding-bottom: 60px;
+}
+
+.main-team-image {
+  width: 100%;
+  height: 100%;
+}
+
 .team-section {
     background-color: $teamsection_and_svg-div;
-    padding: 5px;
   }
 
 .section-heading {
     text-align: center;
     font-weight: 700;
-    font-size: 36px;
-    margin-top: 94px;
+    font-size: 28px;
+    padding-top: 60px;
     margin-bottom: 50px;
   }
 
   .main-description-job {
     font-weight: 400;
     font-size: 14px;
-  }
-  .main-list-team {
-    display: flex;
-    justify-content: space-between;
   }
 
   .icon {
@@ -28,9 +32,9 @@
 
   .svg-list {
     display: flex;
-    margin-left: 32px;
+    justify-content: center;
     row-gap: 10px;
-    margin-bottom: 30px;
+    padding-bottom: 24px;
   }
 
   .svg-list-item {
@@ -64,8 +68,9 @@
   
   .team-item {
     background-color: #fff;
-    margin-bottom: 94px;
   }
+
+  
   
   .main-name {
     font-weight: 500;
@@ -73,4 +78,31 @@
     text-align: center;
     margin-top: 30px;
     margin-bottom: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    .team-item {
+      width: 47%;
+      background-color: #fff;
+    }
+
+    .main-list-team {
+      gap: 44px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .main-team-image {
+      height: 357px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .main-list-team {
+      gap: 30px;
+      flex-wrap: nowrap;
+    }
+    .main-team-image {
+      width: 270px;
+      height: 260px;
+    }
   }
