--- a/sass/utils/_container.scss
+++ b/sass/utils/_container.scss
@@ -1,5 +1,32 @@
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+// .container {
+//     width: 1200px;
+//     margin: 0 auto;
+//     padding: 0 15px;
+//   }
+
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    // min-width: 320px;
   }
+  
+  @media screen and (min-width: 480px) {
+    .container {
+      width: 480px;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .container {
+      width: 768px;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    .container {
+      width: 1200px;
+    }
+  }
+  
