--- a/css/main.css
+++ b/css/main.css
@@ -521,6 +521,10 @@ body {
   padding-bottom: 60px;
 }
 
+.team-item {
+  margin-bottom: 30px;
+}
+
 .main-team-image {
   width: 100%;
   height: 100%;
@@ -614,7 +618,6 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .main-list-team {
-    gap: 30px;
     flex-wrap: nowrap;
   }
   .main-team-image {
