--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,138 @@ body {
     width: 1200px;
   }
 }
+.menu {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.menu-list {
+  margin-top: 30px;
+  margin-bottom: 306px;
+}
+
+.menu-list > li {
+  text-decoration: none;
+  margin-bottom: 32px;
+}
+
+.link {
+  color: #212121;
+  font-size: 40px;
+  font-weight: 500;
+}
+
+.link:hover {
+  color: #2196F3;
+}
+
+.menu-number {
+  color: #2196F3;
+  font-size: 34px;
+  font-weight: 500;
+}
+
+.menu-email {
+  color: #757575;
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.menu-contact-list > li:first-child {
+  margin-bottom: 32px;
+}
+
+.menu-contact-list {
+  margin-bottom: 64px;
+}
+
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-list > li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.social-list > li:first-child {
+  padding-left: 0;
+}
+
+.social-list > li:not(:last-child) {
+  border-right: 1px solid #757575;
+}
+
+.social-name {
+  color: #2196F3;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.menu-toggle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+.header-modal-close:hover,
+.header-modal-close:focus {
+  fill: #2196F3;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: #fff;
+  z-index: 999;
+  transform: translateX(100%);
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  color: #000;
+}
+
+.js-close-menu {
+  height: 30px;
+  width: 30px;
+}
+
+.mobile-menu {
+  list-style: none;
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
 .header {
   padding-top: 17px;
   padding-bottom: 17px;
@@ -963,87 +1095,4 @@ body {
   flex-direction: row;
   align-items: center;
   margin-left: 28px;
-}
-
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-  }
-}
-.menu .link {
-  padding: 10px;
-  color: inherit;
-  text-decoration: none;
-}
-
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
-}
-
-.menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
-}
-
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
-  .menu {
-    display: none;
-  }
-}
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
-  z-index: 999;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
-}
-
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
-}
-
-.mobile-menu {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
