--- a/sass/layout/_headermodal.scss
+++ b/sass/layout/_headermodal.scss
@@ -4,31 +4,64 @@
   margin: 0;
   list-style: none;
 }
-
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-  }
+.menu-list {
+  margin-top: 30px;
+  margin-bottom: 306px;
 }
-
-.menu .link {
-  padding: 10px;
-  color: inherit;
+.menu-list>li {
+  
   text-decoration: none;
+  margin-bottom: 32px;
+  
+}
+.link {
+  color: #212121;
+  font-size: 40px;
+  font-weight: 500;
+}
+ .link:hover {
+  color: #2196F3;
 }
 
-.menu .link:hover,
-.menu .link:focus {
-  text-decoration: underline;
+.menu-number {
+  color: #2196F3;
+  font-size: 34px;
+  font-weight: 500;
 }
-
+.menu-email {
+  color: #757575;
+  font-weight: 500;
+  font-size: 24px;
+}
+.menu-contact-list>li:first-child {
+  margin-bottom: 32px;
+}
+.menu-contact-list {
+  margin-bottom: 64px;
+}
+.social-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.social-list>li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.social-list>li:first-child {
+  padding-left: 0;
+}
+.social-list>li:not(:last-child) {
+  border-right: 1px solid #757575;
+}
+.social-name {
+  color: #2196F3;
+  font-weight: 500;
+  font-size: 18px;
+}
 .menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-
   margin: 0;
   padding: 0;
   background-color: transparent;
@@ -38,16 +71,10 @@
   outline: none;
 }
 
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
+.header-modal-close:hover,
+.header-modal-close:focus {
+ fill: #2196F3;
 }
-.menu {
-    display: none;
-}
-}
-
-
 
 .menu-container {
   position: fixed;
@@ -56,11 +83,11 @@
   width: 100vw;
   height: 100vh;
   padding: 32px;
-  background-color: #3f51b5;
+  background-color: #fff;
   z-index: 999;
 
   transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
+  // transition: transform 250ms ease-in-out;
 }
 
 .menu-container.is-open {
@@ -69,20 +96,27 @@
 
 .menu-container .menu-toggle {
   position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
+  top: 15px;
+  right: 15px;
+  color: #000;
 }
-
+.js-close-menu {
+  height: 30px;
+  width: 30px;
+}
 .mobile-menu {
-  padding: 0;
-  margin: 0;
   list-style: none;
 }
 
 .mobile-menu .link {
   display: block;
   padding: 10px;
-  color: #fff;
   text-decoration: none;
+}
+
+
+@media screen and (min-width: 768px){
+  .menu-toggle {
+    display: none;
+  }
 }
