--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -8,43 +8,55 @@
   background-size: 100vw auto;
   background-repeat: no-repeat;
 }  
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+  .banner { 
+    background-image: linear-gradient(to right,
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), url(../img/background-mobile-2x.jpg);
+  }}
   // ==================================================
-  @media screen and (min-width: 768px) {
+  
+  @media  screen and (min-width: 768px) {
     .banner {
-      background-image: url(../img/background-tablet.jpg);
+      background-image: linear-gradient(to right,
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), url(../img/background-tablet.jpg);
     }
   }
 
-  @media screen and (min-width: 1200px) {
+  @media
+  (min-width: 768px) and (min-device-pixel-ratio: 2),
+  (min-width: 768px) and (min-resolution: 192dpi),
+  (min-width: 768px) and (min-resolution: 2dppx) {
     .banner {
       background-image: linear-gradient(to right,
+  rgba(47, 48, 58, 0.4),
+  rgba(47, 48, 58, 0.4)), url(../img/background-tablet-2x.jpg);
+    }
+  }
+// =========================================================================
+
+@media screen and (min-width: 1200px) {
+  .banner {
+    background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
-  url(../img/background.jpg);
-    }
+  url(../img/background.jpg)
   }
+}
 
-  @media (min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-    .banner {
-    //   @media screen and (min-width: 320px) {
-    //   background-image: url(../img/background-mobile-2x.jpg);
-    // }
-      @media screen and (min-width: 768px) {
+@media (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-width: 1200px) and (min-resolution: 192dpi),
+    (min-width: 1200px) and (min-resolution: 2dppx) {
+      .banner {
         background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
-  rgba(47, 48, 58, 0.4)), url(..img/background-tablet-2x.jpg);
-    }
-    
-    @media screen and (min-width: 1200px) {
-      background-size: 100vw auto;
-      background-image: linear-gradient(to right,
-  rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)), url(../img/background-2x.jpg);
-    }
-    } 
-}
+      }
+  }
 
     .main-heading {
       color: white;
