--- a/sass/layout/_portfolioMain.scss
+++ b/sass/layout/_portfolioMain.scss
@@ -44,7 +44,9 @@
     background-color: $overlay;
     opacity: 0;
   }
-  
+  .overlay:hover {
+    opacity: 1;
+  }
   .overlay-p {
     font-weight: 400px;
     color: #fff;
